# Gravity_Tunnel_Runner

./: .dockerignore  .env.docker.example  .gitignore  AI_CONTEXT.md  Dockerfile.frontend  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
.trae/documents/: gravity_tunnel_runner_optimization_plan.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.backend  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_mysql_initial.py  0002_refresh_token_jti.py  0003_email_auth.py  0004_password_hash.py
backend/app/: config.py  db.py  deps.py  limiter.py  main.py  security.py
backend/app/routers/: auth.py  challenge.py  leaderboard.py  progress.py
backend/app/schemas/: auth.py  challenge.py  leaderboard.py  progress.py
backend/app/services/: anti_cheat.py  avatar_service.py  email_service.py  otp_store.py  share_code.py
backend/tests/: conftest.py  test_auth.py  test_challenge.py  test_leaderboard.py  test_progress.py
nginx/: nginx.conf
src/: main.js
src/core/: config.js  storage.js  utils.js
src/game/: main-game.js
src/services/: api-client.js  auth.js  challenge-cloud.js  cloud-sync.js  network-indicator.js
src/styles/: auth-modal.css  base.css  buttons.css  components.css  hud.css  main.css  menu.css  overlay.css  responsive.css  toast.css  variables.css
src/ui/: auth-ui.js
