[project]
name = "gravity-tunnel-backend"
version = "0.1.0"
description = "Backend for Gravity Tunnel Runner: cloud leaderboard, auth, progress sync, challenges"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "aiomysql>=0.2.0",
  "pymysql>=1.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "alembic>=1.13",
  "slowapi>=0.1.9",
  "email-validator>=2.1",
  "aiosmtplib>=3.0",
  "bcrypt>=4.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "tests"]
